vlib/v/checker/tests/selector_expr_option_err.out
vlib/v/checker/tests/selector_expr_option_err.vv:10:16: error: cannot access fields of an Option, handle the error with `or {...}` or propagate it with `?`
    8 | 
    9 | fn main() {
   10 |     println(abc().status_code)
      |                   ~~~~~~~~~~~
   11 | }
